kube/github-nginx/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    - name: "nginx-service"
      # external port to expose
      port: 80
      # internal port of the application running in the pod
      targetPort: 80
  selector:
    app: nginx
