kube/github-nginx/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gh-nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: "nginx-letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - kube-nginx-github.dartondox.dev
      secretName: kube-nginx-github-dartondox-dev
  ingressClassName: nginx
  rules:
    - host: kube-nginx-github.dartondox.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service # service name (not deployment name)
                port:
                  number: 80
